XML and Email functionality. Email credentials stored in second file.

--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -12,11 +12,14 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Sjuklöner-20171211025241.mdf;Initial Catalog=aspnet-Sjuklöner-20171211025241;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="..\..\AppSettingsSecrets.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="mailAccount" value="ourrobotdemo@gmail.com"/>
+    <add key="mailPassword" value="DemoDagen"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
