--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -199,9 +199,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801212122510_booga.cs" />
-    <Compile Include="Migrations\201801212122510_booga.Designer.cs">
-      <DependentUpon>201801212122510_booga.cs</DependentUpon>
+    <Compile Include="Migrations\201801221034236_yopheydi.cs" />
+    <Compile Include="Migrations\201801221034236_yopheydi.Designer.cs">
+      <DependentUpon>201801221034236_yopheydi.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -339,8 +339,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201801212122510_booga.resx">
-      <DependentUpon>201801212122510_booga.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201801221034236_yopheydi.resx">
+      <DependentUpon>201801221034236_yopheydi.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
