--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -199,9 +199,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201801221514395_initial.cs" />
-    <Compile Include="Migrations\201801221514395_initial.Designer.cs">
-      <DependentUpon>201801221514395_initial.cs</DependentUpon>
+    <Compile Include="Migrations\201801221605017_init.cs" />
+    <Compile Include="Migrations\201801221605017_init.Designer.cs">
+      <DependentUpon>201801221605017_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -345,8 +345,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201801221514395_initial.resx">
-      <DependentUpon>201801221514395_initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201801221605017_init.resx">
+      <DependentUpon>201801221605017_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
