Added BankID functionality. Probably.

--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -190,6 +191,11 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Connected Services\BankIDService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AssistantsController.cs" />
     <Compile Include="Controllers\ClaimsController.cs" />
@@ -199,7 +205,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-
+    <Compile Include="Migrations\201802011603423_new.cs" />
+    <Compile Include="Migrations\201802011603423_new.Designer.cs">
+      <DependentUpon>201802011603423_new.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802021340406_SSN_ToUser.cs" />
+    <Compile Include="Migrations\201802021340406_SSN_ToUser.Designer.cs">
+      <DependentUpon>201802021340406_SSN_ToUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -236,6 +249,12 @@
     <Compile Include="Viewmodels\ScheduleVM.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\BankIDService\configuration91.svcinfo" />
+    <None Include="Connected Services\BankIDService\configuration.svcinfo" />
+    <None Include="Connected Services\BankIDService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Robin_color.png" />
@@ -248,6 +267,28 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Connected Services\BankIDService\RpService.wsdl" />
+    <Content Include="Connected Services\BankIDService\Sjuklöner.BankIDService.AuthenticateResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\BankIDService\Sjuklöner.BankIDService.CollectResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\BankIDService\Sjuklöner.BankIDService.CollectResponseType.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\BankIDService\Sjuklöner.BankIDService.FileSignResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\BankIDService\Sjuklöner.BankIDService.OrderResponseType.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\BankIDService\Sjuklöner.BankIDService.SignResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\BankIDService\v4.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -260,7 +301,9 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -324,6 +367,8 @@
     <Content Include="Views\Claims\StodSystemLogin.cshtml" />
     <Content Include="Views\Claims\Decide.cshtml" />
     <Content Include="Views\Claims\StodsystemLogout.cshtml" />
+    <Content Include="Views\Account\_BankIDLogin.cshtml" />
+    <Content Include="Views\Account\BankIDWaitScreen.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -340,6 +385,20 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\BankIDService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201802011603423_new.resx">
+      <DependentUpon>201802011603423_new.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802021340406_SSN_ToUser.resx">
+      <DependentUpon>201802021340406_SSN_ToUser.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
