--- a/Sjuklöner/Web.config
+++ b/Sjuklöner/Web.config
@@ -97,4 +97,43 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <customBinding>
+        <binding name="RpServiceSoapBinding">
+          <textMessageEncoding messageVersion="Soap11" />
+          <httpsTransport requireClientCertificate="true" />
+        </binding>
+      </customBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://appapi2.test.bankid.com/rp/v4"
+                binding="customBinding"
+                bindingConfiguration="RpServiceSoapBinding"
+                contract="BankIDService.RpServicePortType"
+                name="RpServiceSoapPort"
+                behaviorConfiguration="bankid" />
+    </client>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="bankid">
+          <clientCredentials>
+            <clientCertificate findValue="FP Testcert 2"
+                               x509FindType="FindBySubjectName"
+                               storeLocation="CurrentUser"
+                               storeName="My" />
+            <serviceCertificate>
+              <defaultCertificate findValue="Test BankID SSL Root CA v1 Test"
+                                  x509FindType="FindBySubjectName"
+                                  storeLocation="LocalMachine"
+                                  storeName="Root" />
+              <authentication certificateValidationMode="None"
+                              revocationMode="NoCheck"
+                              trustedStoreLocation="LocalMachine" />
+            </serviceCertificate>
+          </clientCredentials>
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+  </system.serviceModel>
 </configuration>
