--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -198,6 +198,7 @@
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AssistantsController.cs" />
+    <Compile Include="Controllers\CareCompaniesController.cs" />
     <Compile Include="Controllers\ClaimsController.cs" />
     <Compile Include="Controllers\CollectiveAgreementsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -205,8 +206,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-
-
+    <Compile Include="Migrations\201802061644598_init.cs" />
+    <Compile Include="Migrations\201802061644598_init.Designer.cs">
+      <DependentUpon>201802061644598_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802081053099_addSelectedAssistantPropertiesInClaim.cs" />
+    <Compile Include="Migrations\201802081053099_addSelectedAssistantPropertiesInClaim.Designer.cs">
+      <DependentUpon>201802081053099_addSelectedAssistantPropertiesInClaim.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -231,7 +238,11 @@
     <Compile Include="Models\DocStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Viewmodels\OmbudCreateVM.cs" />
+    <Compile Include="Viewmodels\OmbudIndexVM.cs" />
     <Compile Include="Viewmodels\AssistantIndexVM.cs" />
+    <Compile Include="Viewmodels\UserEditVM.cs" />
+    <Compile Include="Viewmodels\CareCompanyEditVM.cs" />
     <Compile Include="Viewmodels\CollectiveAgreementEditVM.cs" />
     <Compile Include="Viewmodels\CollectiveAgreementDeleteVM.cs" />
     <Compile Include="Viewmodels\CollectiveAgreementCreateVM.cs" />
@@ -364,13 +375,25 @@
     <Content Include="Views\CollectiveAgreements\Delete.cshtml" />
     <Content Include="Views\CollectiveAgreements\Edit.cshtml" />
     <Content Include="Views\CollectiveAgreements\Index.cshtml" />
+    <Content Include="Views\Account\_BankIDLogin.cshtml" />
+    <Content Include="Views\Account\BankIDWaitScreen.cshtml" />
     <Content Include="Views\Assistants\Create.cshtml" />
     <Content Include="Views\Assistants\Delete.cshtml" />
     <Content Include="Views\Assistants\Details.cshtml" />
     <Content Include="Views\Assistants\Edit.cshtml" />
     <Content Include="Views\Assistants\Index.cshtml" />
-    <Content Include="Views\Account\_BankIDLogin.cshtml" />
-    <Content Include="Views\Account\BankIDWaitScreen.cshtml" />
+    <Content Include="Views\CareCompanies\Create.cshtml" />
+    <Content Include="Views\CareCompanies\Delete.cshtml" />
+    <Content Include="Views\CareCompanies\Details.cshtml" />
+    <Content Include="Views\CareCompanies\Edit.cshtml" />
+    <Content Include="Views\CareCompanies\Index.cshtml" />
+    <Content Include="Views\ApplicationUsers\Create.cshtml" />
+    <Content Include="Views\ApplicationUsers\Delete.cshtml" />
+    <Content Include="Views\ApplicationUsers\Details.cshtml" />
+    <Content Include="Views\ApplicationUsers\Edit.cshtml" />
+    <Content Include="Views\ApplicationUsers\Index.cshtml" />
+    <Content Include="Views\CareCompanies\IndexOmbud.cshtml" />
+    <Content Include="Views\CareCompanies\CreateOmbud.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -388,7 +411,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
-  
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201802061644598_init.resx">
+      <DependentUpon>201802061644598_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802081053099_addSelectedAssistantPropertiesInClaim.resx">
+      <DependentUpon>201802081053099_addSelectedAssistantPropertiesInClaim.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
