--- a/Sjuklöner/Sjuklöner.csproj
+++ b/Sjuklöner/Sjuklöner.csproj
@@ -210,6 +210,14 @@
     <Compile Include="Migrations\201802121002167_init.Designer.cs">
       <DependentUpon>201802121002167_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802141526511_next.cs" />
+    <Compile Include="Migrations\201802141526511_next.Designer.cs">
+      <DependentUpon>201802141526511_next.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802151345304_Fullmakt.cs" />
+    <Compile Include="Migrations\201802151345304_Fullmakt.Designer.cs">
+      <DependentUpon>201802151345304_Fullmakt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Admin.cs" />
@@ -236,6 +244,7 @@
     <Compile Include="Models\DocStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Viewmodels\DeleteOmbudVM.cs" />
     <Compile Include="Viewmodels\OmbudCreateVM.cs" />
     <Compile Include="Viewmodels\OmbudIndexVM.cs" />
     <Compile Include="Viewmodels\AssistantIndexVM.cs" />
@@ -392,7 +401,7 @@
     <Content Include="Views\ApplicationUsers\Edit.cshtml" />
     <Content Include="Views\ApplicationUsers\Index.cshtml" />
     <Content Include="Views\CareCompanies\IndexOmbud.cshtml" />
-    <Content Include="Views\CareCompanies\CreateOmbud.cshtml" />
+    <Content Include="Views\Account\CreateOmbud.cshtml" />
     <Content Include="Views\Account\_BankIDLogin.cshtml" />
     <Content Include="Views\Account\BankIDWaitScreen.cshtml" />
     <Content Include="Views\Claims\Create4.cshtml" />
@@ -419,6 +428,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802121002167_init.resx">
       <DependentUpon>201802121002167_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802141526511_next.resx">
+      <DependentUpon>201802141526511_next.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802151345304_Fullmakt.resx">
+      <DependentUpon>201802151345304_Fullmakt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
